--- a/pages/index.html
+++ b/pages/index.html
@@ -7,7 +7,7 @@
 <body>
     Alpha beta
 <ul>
-    <li><a href="./alpha.html">Alpha</a></li>
+    <li><a href="./weight">Alpha</a></li>
 </ul>
 </body>
 </html>
