--- a/pages/index.html
+++ b/pages/index.html
@@ -9,7 +9,7 @@
 <ul>
     <li><a href="./weight">Alpha</a></li>
     <li><a href="./apiLog">RandUser</a></li>
-    <li><a href="./blogs-page">RandUser</a></li>
+    <li><a href="./blogs-page">BLogs</a></li>
 </ul>
 <img src="images.jpg">
 </body>
